--- a/supplementaryInfo.Rmd
+++ b/supplementaryInfo.Rmd
@@ -7,7 +7,7 @@ output:
   html_document:
     fig_caption: yes
     highlight: textmate
-    theme: readable
+    theme: paper
     toc: yes
     toc_depth: 6
     toc_float: yes
